<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
     <TextView 
        android:id="@+id/search_bar"
        android:layout_marginTop="@dimen/searchbar_margin_top"
        android:layout_marginLeft="@dimen/title_bar_padding"
        android:layout_marginRight="@dimen/title_bar_padding"
        android:layout_marginBottom="@dimen/searchbar_margin_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/searchbar_height"
        android:paddingLeft="@dimen/searchbar_icon_margin"
        android:drawablePadding="@dimen/searchbar_icon_margin"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/icon_search"
        android:textSize="@dimen/txt_middle"
        android:textColor="@color/color_999999"
        android:background="@drawable/searchbar_bg_border"/>
    <com.handmark.pulltorefreshview.PullToRefreshScrollView 
        android:id="@+id/pull_fresh_scrollview"
        android:layout_below="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
		android:focusableInTouchMode="true"
		android:descendantFocusability="beforeDescendants"
        android:scrollbars="none">
    <RelativeLayout 
        android:id="@+id/rlt_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      >
   
    <include 
        android:id="@+id/v_banner"
        android:layout_width="match_parent"
        android:layout_height="100dp"  
        layout="@layout/bannercarousel_layout"/>
    <LinearLayout
        android:id="@+id/llt_sort"
        android:layout_below="@+id/v_banner"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal"
        android:background="@color/color_white">
        <RelativeLayout
            android:id="@+id/rlt_special"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/title_bar_padding"
                android:layout_marginTop="@dimen/special_label_margin_top"
                android:textColor="@color/color_6fc9e9"
                android:textSize="@dimen/txt_middle"
                android:text="@string/special_label"/>
            <ImageView 
                android:id="@+id/iv_special"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/icon_special"/>
            <TextView 
                android:layout_below="@+id/iv_special"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/special_description_margin_top"
                android:layout_centerHorizontal="true"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/txt_smaller"
                android:text="@string/special_description"/>
        </RelativeLayout>
        <View 
            android:layout_width="@dimen/diliver_line_height"
            android:layout_height="wrap_content"
            android:background="@color/color_dddddd"/>
         <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
             	<RelativeLayout
             	    android:id="@+id/rlt_artifact"
		            android:layout_width="90dp"
		            android:layout_height="65dp"
		            android:orientation="vertical"><!--神器区域   -->
             		<TextView 
             		    android:id="@+id/tv_artifact_lable"
             		    android:layout_width="wrap_content"
             		    android:layout_height="wrap_content"
             		    android:layout_marginTop="@dimen/game_label_margin_top"
             		    android:layout_marginLeft="@dimen/game_label_margin_left"
             		    android:textSize="@dimen/txt_middle"
             		    android:textColor="@color/color_a0d468"
             		    android:text="@string/artifact_label"/>
             		<TextView 
             		    android:layout_below="@+id/tv_artifact_lable"
             		    android:layout_alignLeft="@+id/tv_artifact_lable"
             		    android:layout_width="wrap_content"
             		    android:layout_height="wrap_content"
             		    android:textSize="@dimen/txt_smaller"
             		    android:textColor="@color/color_666666"
             		    android:text="@string/artifact_description"/>
             		<ImageView 
             		    android:layout_toRightOf="@+id/tv_artifact_lable"
             		    android:layout_marginLeft="@dimen/icon_artifact_margin_left"
             		    android:layout_centerVertical="true"
             		    android:layout_width="wrap_content"
             		    android:layout_height="wrap_content"
             		    android:background="@drawable/icon_artifact"/>
        		</RelativeLayout><!--神器区域  end-->
        		 <View
        		    android:id="@+id/diliver_1"
        		    android:layout_toRightOf="@+id/rlt_artifact"
		            android:layout_width="@dimen/diliver_line_height"
		            android:layout_height="65dp"
		            android:background="@color/color_dddddd"/>
        		<RelativeLayout
        		    android:id="@+id/rlt_game"
        		    android:layout_toRightOf="@+id/diliver_1"
		            android:layout_width="match_parent"
		            android:layout_height="65dp"
		            android:orientation="vertical"><!--游戏区域  -->
		            
		            <TextView 
             		    android:id="@+id/tv_game_lable"
             		    android:layout_width="wrap_content"
             		    android:layout_height="wrap_content"
             		    android:layout_marginTop="@dimen/game_label_margin_top"
             		    android:layout_marginLeft="@dimen/game_label_margin_left"
             		    android:textSize="@dimen/txt_middle"
             		    android:textColor="@color/color_86d480"
             		    android:text="@string/game_lable"/>
             		<TextView 
             		    android:id="@+id/tv_game_description"
             		    android:layout_below="@+id/tv_game_lable"
             		    android:layout_alignLeft="@+id/tv_game_lable"
             		    android:layout_width="wrap_content"
             		    android:layout_height="wrap_content"
             		    android:textSize="@dimen/txt_smaller"
             		    android:textColor="@color/color_666666"
             		    android:text="@string/game_description"/>
             		<ImageView 
             		    android:layout_toRightOf="@+id/tv_game_description"
             		    android:layout_marginLeft="8dp"
             		    android:layout_width="wrap_content"
             		    android:layout_height="wrap_content"
             		    android:layout_centerVertical="true"
             		    android:background="@drawable/icon_game"/>
		            
        		</RelativeLayout><!--游戏区域 end -->
        		<View
        		    android:id="@+id/diliver_2"
        		    android:layout_below="@+id/rlt_game"
		            android:layout_width="match_parent"
		            android:layout_height="@dimen/diliver_line_height"
		            android:background="@color/color_dddddd"/>
        		<RelativeLayout
        		    android:id="@+id/rlt_rank"
        		    android:layout_below="@+id/diliver_2"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:orientation="vertical"><!--排行区域  -->
		            
		             <TextView 
             		    android:id="@+id/tv_rank_lable"
             		    android:layout_toRightOf="@+id/iv_rank"
             		    android:layout_width="wrap_content"
             		    android:layout_height="wrap_content"
             		    android:layout_marginTop="@dimen/special_description_margin_top"
             		    android:layout_marginLeft="@dimen/game_label_margin_left"
             		    android:textSize="@dimen/txt_middle"
             		    android:textColor="@color/color_fb7b61"
             		    android:text="@string/rank_lable"/>
             		<TextView 
             		    android:id="@+id/tv_rank_description"
             		    android:layout_below="@+id/tv_rank_lable"
             		    android:layout_alignLeft="@+id/tv_rank_lable"
             		    android:layout_width="wrap_content"
             		    android:layout_height="wrap_content"
             		    android:textSize="@dimen/txt_smaller"
             		    android:textColor="@color/color_666666"
             		    android:text="@string/rank_description"/>
             		<ImageView 
             		    android:id="@+id/iv_rank"
             		    android:layout_marginLeft="25dp"
             		    android:layout_width="wrap_content"
             		    android:layout_height="wrap_content"
             		    android:layout_centerVertical="true"
             		    android:background="@drawable/icon_rank"/>
		            
        		</RelativeLayout><!--排行区域  end-->
         </RelativeLayout>
    </LinearLayout>
    <View 
        android:id="@+id/diliver_recomand"
        android:layout_below="@+id/llt_sort"
        android:layout_width="match_parent"
        android:layout_height="@dimen/diliver_line_height"
        android:background="@color/color_dddddd"/>
    
    <RelativeLayout
        android:id="@+id/rlt_recomand"
        android:layout_below="@+id/diliver_recomand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/searchbar_margin_top"
        android:background="@color/color_white"
        android:orientation="vertical"><!-- 推荐区域 -->
        <View 
            android:id="@+id/diliver_4"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/diliver_line_height"
	        android:background="@color/color_dddddd"/>
        <TextView 
            android:id="@+id/tv_recomand_lable"
            android:layout_below="@+id/diliver_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/title_bar_padding"
            android:layout_marginTop="@dimen/searchbar_icon_margin"
            android:drawableLeft="@drawable/icon_recomand"
            android:drawablePadding="5dp"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/txt_big"
            android:text="@string/recomand"/>
        <com.zxly.market.view.ZXGridView
            android:id="@+id/gv_recomand"
            android:layout_below="@+id/tv_recomand_lable"
            android:layout_marginTop="@dimen/grid_app_margin_top"
            android:scrollbars="none"
            android:layout_marginLeft="@dimen/title_bar_padding"
            android:layout_marginRight="@dimen/title_bar_padding"
            android:layout_marginBottom="@dimen/grid_app_margin_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="4"
            android:cacheColorHint="#00000000"
            android:listSelector="#00000000"
            android:horizontalSpacing="10dp"
            android:layout_centerHorizontal="true"
            android:verticalSpacing="@dimen/grid_vertica_spacing"/>
         <View 
            android:id="@+id/diliver_5"
            android:layout_below="@+id/gv_recomand"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/diliver_line_height"
	        android:background="@color/color_dddddd"/>
         <RelativeLayout 
             android:id="@+id/rlt_more"
             android:layout_below="@+id/diliver_5"
             android:layout_width="match_parent"
             android:layout_height="@dimen/look_more_height">
            <TextView 
	            android:textSize="@dimen/txt_small"
	            android:textColor="@color/color_57be17"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"  
	            android:drawablePadding="0dp"
	            android:gravity="center"
	            android:text="@string/look_more"/>
         </RelativeLayout>
          <View 
            android:id="@+id/diliver_6"
            android:layout_below="@+id/rlt_more"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/diliver_line_height"
	        android:background="@color/color_dddddd"/>
           
    </RelativeLayout><!-- 推荐区域 end -->
    
    <com.zxly.market.view.ZXWebview
        android:id="@+id/web_ad"
        android:layout_below="@+id/rlt_recomand"
        android:layout_marginTop="@dimen/searchbar_margin_top"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        />
    <RelativeLayout
        android:id="@+id/rlt_hot"
        android:layout_below="@+id/web_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/searchbar_margin_top"
        android:background="@color/color_white"
        android:orientation="vertical"><!-- 热门区域 -->
        <View 
            android:id="@+id/diliver_7"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/diliver_line_height"
	        android:background="@color/color_dddddd"/>
        <TextView 
            android:id="@+id/tv_hot_lable"
            android:layout_below="@+id/diliver_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/title_bar_padding"
            android:layout_marginTop="@dimen/searchbar_icon_margin"
            android:drawableLeft="@drawable/icon_hot"
            android:drawablePadding="5dp"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/txt_big"
            android:text="@string/hot_app"/>
        
        <com.zxly.market.view.ZXListView
            android:id="@+id/lv_hot"
            style="@style/ListView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_hot_lable"/>   
    </RelativeLayout><!-- 推荐区域 end -->
    </RelativeLayout>
    </com.handmark.pulltorefreshview.PullToRefreshScrollView>
    <include 
	    android:id="@+id/loading_view"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    layout="@layout/commen_lodaing"/>
</RelativeLayout>
